# solar-sym

./: .gitignore  CMakeLists.txt  README.md  celestial_body.py  main.py  main2.py  planetary_system.py  system.py  test.py
header/: body.h  system.h
python/: main.py  main2.py  system.py
rs/solar-sym/: Cargo.toml
rs/solar-sym/src/: main.rs  system.rs  visualization.rs
src/: bindings.cpp  main.cpp  system.cpp
